# enum-macro-gen

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
macro/: Cargo.toml  crates-io.md
macro/src/: lib.rs
scripts/: README.in.md
testing/: Cargo.toml
testing/src/: main.rs
