[package]
name = "enum_macro_gen"
version = "0.1.1"
edition = "2021"
keywords = ["proc_macro", "procmacro"]
license = "MIT/Apache-2.0"
description = "Macro generator for handling enums"
homepage = "https://github.com/da-x/enum_macro_gen"
repository = "https://github.com/da-x/enum_macro_gen"
categories = ["database"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[features]
all = []

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
convert_case = "0.6"
proc-macro-error = { version = "1", default-features = false }
